gcc/testsuite/rust/rustc/ui/error-codes/E0264.rs
#![feature(lang_items)]

extern "C" {
    #[lang = "cake"]
    fn cake(); // { dg-error ".E0264." "" { target *-*-* } }
}

fn main() {}

